Testes de performance com G1GC (melhor controle de memoria) menos pausas stop the world